@@ -58,16 +58,16 @@ public interface ValidationCheckResult {
 
     default Object filterValue(Object value) {
         if (value instanceof Collection<?> collection) {
-            if(collection.size()<=MAX_COLLECTION_SIZE){
+            if (collection.size() <= MAX_COLLECTION_SIZE) {
                 return collection;
             }
             List<?> limitedList = collection.stream()
                     .limit(MAX_COLLECTION_SIZE)
-                    .collect(Collectors.toList());
+                    .toList();
             return switch (value) {
-                case List list -> limitedList;
-                case SortedSet sortedSet -> new TreeSet<>(limitedList);
-                case Set set -> new HashSet<>(limitedList);
+                case List list -> list;
+                case SortedSet sortedSet -> new TreeSet<>(sortedSet);
+                case Set set -> new HashSet<>(set);
                 default -> limitedList; // Retourne une List par défaut
 
             };
