@@ -4,33 +4,31 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.io.Resources;
-import fr.inra.oresing.domain.exceptions.OreSiTechnicalException;
 import fr.inra.oresing.domain.OreSiUser;
+import fr.inra.oresing.domain.exceptions.OreSiTechnicalException;
 import fr.inra.oresing.persistence.AuthenticationService;
 import fr.inra.oresing.persistence.UserRepository;
 import fr.inra.oresing.rest.reactive.*;
 import fr.inra.oresing.rest.security.JWTExtractor;
 import jakarta.servlet.http.Cookie;
 import lombok.Getter;
-import org.apache.commons.io.IOUtils;
-import org.hamcrest.Matchers;
 import org.hamcrest.core.IsEqual;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.junit.jupiter.api.Assertions;
 import org.springframework.http.MediaType;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
-import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.stereotype.Component;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.ResultActions;
+import org.springframework.test.web.servlet.ResultMatcher;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
@@ -39,37 +37,47 @@ import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
 
+import static org.hamcrest.Matchers.hasItem;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.request;
 
-@Component
 public class Fixtures {
 
-    @Autowired
-    private MockMvc mockMvc;
+    public final CreateUser lambda;
+    public final CreateUser admin;
+    public UserConnection lambdaConnection;
+    public UserConnection adminConnection;
 
-    @Autowired
-    private AuthenticationService authenticationService;
-    @Autowired
-    private NamedParameterJdbcTemplate namedParameterJdbcTemplate;
+    public UserConnection getMonsoresimpleConnection() {
+        return monsoresimpleConnection;
+    }
 
-    @Autowired
-    private UserRepository userRepository;
-    @Getter
-    private Cookie cookie;
+    public UserConnection getWithRightsUserConnection() {
+        return withRightsUserConnection;
+    }
 
+    public Fixtures.UserConnection monsoresimpleConnection;
+    public Fixtures.UserConnection withRightsUserConnection;
 
-    static List<ReactiveTypeInfo> getInfos(final MvcResult result) throws UnsupportedEncodingException {
-        return Optional.ofNullable(getReactiveResultFromResult(result)
-                        .get(ReactiveType.REACTIVE_INFO))
-                .orElseGet(List::of)
-                .stream()
-                .map(ReactiveTypeInfo.class::cast)
-                .collect(Collectors.toList());
+    private final MockMvc mockMvc;
+    private final AuthenticationService authenticationService;
+    private final NamedParameterJdbcTemplate namedParameterJdbcTemplate;
+    private final UserRepository userRepository;
+    public Fixtures(MockMvc mockMvc, UserRepository userRepository, NamedParameterJdbcTemplate namedParameterJdbcTemplate, AuthenticationService authenticationService) throws Exception {
+        this.mockMvc = mockMvc;
+        this.userRepository = userRepository;
+        this.namedParameterJdbcTemplate = namedParameterJdbcTemplate;
+        this.authenticationService = authenticationService;
+        lambda = new CreateUser("lambda", "xxxxxxxx", "lambda@inrae.fr");
+        admin = new CreateUser("poussin", "xxxxxxxx", "poussin@inrae.fr");
+        lambdaConnection = createUserForUserDefinition(lambda, true, false);
+        adminConnection = createUserForUserDefinition(admin, true, true);
     }
 
     static List<ReactiveTypeError> getErrors(final MvcResult result) throws UnsupportedEncodingException {
@@ -78,12 +86,7 @@ public class Fixtures {
                 .orElseGet(List::of)
                 .stream()
                 .map(ReactiveTypeError.class::cast)
-                .collect(Collectors.toList());
-    }
-
-    public String getIdFromApplicationResult(final MvcResult result) throws UnsupportedEncodingException {
-        return (String) getResults(result).getFirst().result();
-
+                .toList();
     }
 
     static List<ReactiveTypeResult> getResults(final MvcResult result) throws UnsupportedEncodingException {
@@ -92,16 +95,7 @@ public class Fixtures {
                 .orElseGet(List::of)
                 .stream()
                 .map(ReactiveTypeResult.class::cast)
-                .collect(Collectors.toList());
-    }
-
-    static List<ReactiveTypeProgress> getProgress(final MvcResult result) throws UnsupportedEncodingException {
-        return Optional.ofNullable(getReactiveResultFromResult(result)
-                        .get(ReactiveType.REACTIVE_PROGRESS))
-                .orElseGet(List::of)
-                .stream()
-                .map(ReactiveTypeProgress.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     static Map<ReactiveType, List<ReactiveResult>> getReactiveResultFromResult(final MvcResult result) throws UnsupportedEncodingException {
@@ -110,7 +104,7 @@ public class Fixtures {
                     try {
                         return new ObjectMapper().readValue(o, Map.class);
                     } catch (final JsonProcessingException e) {
-                        throw new RuntimeException(e);
+                        throw new OreSiTechnicalException(e.getMessage(), e);
                     }
                 })
                 .collect(
@@ -118,89 +112,13 @@ public class Fixtures {
                                 m -> ReactiveType.valueOf((String) m.get("type")),
                                 Collectors.collectingAndThen(Collectors.toList(),
                                         list -> list.stream().map(el -> switch (ReactiveType.valueOf((String) el.get("type"))) {
-                                            case REACTIVE_RESULT -> new ReactiveTypeResult(el.get("result"));
-                                            case REACTIVE_INFO -> new ReactiveTypeInfo(el.get("result"));
-                                            case REACTIVE_ERROR -> new ReactiveTypeError(el.get("result"));
-                                            case REACTIVE_PROGRESS -> new ReactiveTypeProgress(el.get("result"));
-                                        }).collect(Collectors.toList())))
+                                                    case REACTIVE_RESULT -> new ReactiveTypeResult(el.get("result"));
+                                                    case REACTIVE_INFO -> new ReactiveTypeInfo(el.get("result"));
+                                                    case REACTIVE_ERROR -> new ReactiveTypeError(el.get("result"));
+                                                    case REACTIVE_PROGRESS -> new ReactiveTypeProgress(el.get("result"));
+                                                })
+                                                .collect(Collectors.toList())))
                 );
-    }
-
-    public Exception loadApplicationWithError(final MockMultipartFile file,
-                                              final Cookie cookie,
-                                              final String applicationName) throws Exception {
-        return mockMvc
-                .perform(multipart("/api/v1/applications/{applicationName}", applicationName)
-                            .file(file).with(csrf().asHeader())
-                        .cookie(cookie)
-                )
-                .andExpect(status().is(401))
-                .andReturn()
-                .getResolvedException();
-    }
-
-    MvcResult validateApplication(final MockMultipartFile file,
-                                  final Cookie cookie) throws Exception {
-        final ResultActions result = mockMvc.perform(
-                multipart("/api/v1/validate-configuration")
-                            .file(file).with(csrf().asHeader())
-                        .accept(MediaType.APPLICATION_NDJSON)
-                        .cookie(cookie)
-        );
-        return mockMvc.perform(asyncDispatch(
-                        result
-                                .andDo(result1 -> {
-                                    if(result1.getResponse().getStatus() > 250){
-                                        System.out.println(result1);
-                                    }
-                                })
-                                .andExpect(request().asyncStarted())
-                                .andReturn())
-                )
-                .andReturn();
-    }
-
-    public MvcResult loadApplication(final MockMultipartFile file,
-                                     final Cookie cookie,
-                                     final String applicationName,
-                                     final String comment) throws Throwable {
-        try {
-            final ResultActions result = mockMvc.perform(
-                    multipart("/api/v1/applications/{applicationName}", applicationName)
-                            .file(file).with(csrf().asHeader())
-                            .param("comment", comment != null ? comment : "")
-                            .accept(MediaType.APPLICATION_NDJSON)
-                            .cookie(cookie)
-            );
-            return mockMvc.perform(asyncDispatch(
-                            result
-                                    //.andExpect(request().asyncStarted())
-                                    .andReturn())
-                    )
-                    .andReturn();
-        } catch (final Exception e) {
-            throw e.getCause()==null?e:e.getCause();
-        }
-    }
-
-
-    MvcResult changeConfiguration(final MockMultipartFile file,
-                                  final Cookie cookie,
-                                  final String applicationName,
-                                  final String comment) throws Exception {
-        final ResultActions result = mockMvc.perform(
-                multipart("/api/v1/applications/{applicationName}/configuration", applicationName)
-                            .file(file).with(csrf().asHeader())
-                        .param("comment", comment != null ? comment : "")
-                        .accept(MediaType.APPLICATION_NDJSON)
-                        .cookie(cookie)
-        );
-        return mockMvc.perform(asyncDispatch(
-                        result
-                                .andExpect(request().asyncStarted())
-                                .andReturn())
-                )
-                .andReturn();
     }
 
     public static String getApplicationWithComputedComponentsWithReferences() {
@@ -219,10 +137,6 @@ public class Fixtures {
         final Map<String, String> dataFiles = new HashMap<>();
         dataFiles.put("dataset", "/data/minotaur/data/datateSet.csv");
         return dataFiles;
-    }
-
-    public static String getMonsoreApplicationName() {
-        return Application.MONSORE.getName();
     }
 
     public static String getTeledetectionConfigurationResourceName() {
@@ -260,51 +174,6 @@ public class Fixtures {
         return data;
     }
 
-
-    public static String getMonsoreApplicationConfigurationWithRepositoryResourceName() {
-        return "/data/monsore/monsore-with-repository.yaml";
-    }
-    public static String getMonsoreApplicationConfigurationResourceName() {
-        return "/data/monsore/monsore.yaml";
-    }
-
-    public static Map<String, String> getMonsoreReferentielEspecestoTrimFiles() {
-        final Map<String, String> referentielFiles = new HashMap<>();
-        referentielFiles.put("especes", "/data/monsore/refdatas/especesToTrim.csv");
-        return referentielFiles;
-    }
-
-    public static Map<String, String> getMonsoreReferentielFiles() {
-        final Map<String, String> referentielFiles = new LinkedHashMap<>();
-        referentielFiles.put("especes", "/data/monsore/refdatas/especes.csv");
-        referentielFiles.put("projet", "/data/monsore/refdatas/projet.csv");
-        referentielFiles.put("type_de_sites", "/data/monsore/refdatas/type_de_sites.csv");
-        referentielFiles.put("sites", "/data/monsore/refdatas/sites.csv");
-        referentielFiles.put("themes", "/data/monsore/refdatas/themes.csv");
-        referentielFiles.put("type_de_fichiers", "/data/monsore/refdatas/type_de_fichiers.csv");
-        referentielFiles.put("site_theme_datatype", "/data/monsore/refdatas/types_de_donnees_par_themes_de_sites_et_projet.csv");
-        referentielFiles.put("unites", "/data/monsore/refdatas/unites.csv");
-        referentielFiles.put("valeurs_qualitatives", "/data/monsore/refdatas/valeurs_qualitatives.csv");
-        referentielFiles.put("variables", "/data/monsore/refdatas/variables.csv");
-        referentielFiles.put("variables_et_unites_par_types_de_donnees", "/data/monsore/refdatas/variables_et_unites_par_types_de_donnees.csv");
-        referentielFiles.put("pem", "/data/monsore/data-pem.csv");
-        return referentielFiles;
-    }
-
-    public static String getPemDataResourceName() {
-        return "/data/monsore/data-pem.csv";
-    }
-
-    public static String getPemDataToTrimResourceName() {
-        return "/data/monsore/data-pem-to-trim.csv";
-    }
-
-    public static String getPemRepositoryDataResourceName(final String projet, final String site) {
-        String localSite = site
-                .replaceAll("^NULL_KEY__", "");
-        return String.format("/data/monsore/%s-%s-p1-pem.csv", projet, localSite);
-    }
-
     public static String getForetRepositoryParams(final String fileName, final String datatype) {
         //fougeres-fou_4_swc_j_01-01-1999_31-01-1999.csv
         Pattern pattern = Pattern.compile("(.*)_" + datatype + "_(.*)_(.*).csv");
@@ -312,10 +181,10 @@ public class Fixtures {
         if (!matcher.matches()) {
             return null;
         }
-        String zone_etude = matcher.group(1);
-        String[] parent_site = zone_etude.split("-");
+        String zoneEtude = matcher.group(1);
+        String[] parent_site = zoneEtude.split("-");
         if (parent_site.length > 1) {
-            zone_etude = String.format("%1$s.%1$s__%2$s", parent_site[0], parent_site[1]);
+            zoneEtude = String.format("%1$s.%1$s__%2$s", parent_site[0], parent_site[1]);
         }
         DateTimeFormatter formaterIn = DateTimeFormatter.ofPattern("dd-MM-yyyy");
         DateTimeFormatter formaterOut = DateTimeFormatter.ofPattern("yyyy-MM-dd");
@@ -335,7 +204,7 @@ public class Fixtures {
                       "to":"%3$s"
                    },
                    "topublish":true
-                }""", zone_etude, dateDebut, dateFin);
+                }""", zoneEtude, dateDebut, dateFin);
     }
 
     public static String getPemRepositoryParamsWithId(final String projet, final String plateforme, final String site, final String fileId, final boolean toPublish) {
@@ -353,36 +222,6 @@ public class Fixtures {
                    "topublish":%5$s
                 }""", fileId, projet, plateforme, site, toPublish);
     }
-
-    public static String getPemRepositoryParams(final String projet, final String plateforme, final String site, final boolean toPublish) {
-        return String.format("""
-                {
-                   "fileid":null,
-                   "binaryfiledataset":{
-                      "datatype":"monsore",
-                      "requiredAuthorizations":{
-                         "projet":["projet_%1$s"],
-                         "sites":["%3$s__p1"]
-                      },
-                      "from":"1984-01-01 00:00:00",
-                      "to":"1984-01-05 00:00:00"
-                   },
-                   "topublish":%4$s
-                }""", projet, plateforme, site, toPublish);
-    }
-
-    public static String getPemRepositoryId(final String plateforme, final String projet, final String site) {
-        return String.format("""
-                {
-                      "requiredAuthorizations":{
-                         "projet":["projet_%2$s"],
-                         "sites":["%3$s__p1"]
-                      },
-                      "from":"1984-01-01 00:00:00",
-                      "to":"1984-01-05 00:00:00"
-                   }""", plateforme, projet, site);
-    }
-
 
     public static String getConditionsPrelevementRepositoryId(final String site) {
         return String.format("""
@@ -521,17 +360,17 @@ public class Fixtures {
         referentielErrors.put("invalidDateWithComponent", List.of(
                 "02/01/2016",
                 "01/01/16",
-                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"pattern\":\"dd/MM/yyyy\",\"value\":\"01/01/16\",\"target\":{\"column\":\"date\"}},\"lineNumber\":2}]"
+                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"pattern\":\"dd/MM/yyyy\",\"value\":\"01/01/16\",\"component\":\"date\"},\"lineNumber\":2}]"
         ));
         referentielErrors.put("invalidFloatWithColumn", List.of(
                 "55,22",
                 "x",
-                "[{\"type\":\"FloatValidationCheckResult\",\"message\":\"invalidFloatWithComponent\",\"params\":{\"target\":{\"column\":\"isFloatValue\"},\"value\":\"x\"},\"lineNumber\":5}]"
+                "[{\"type\":\"FloatValidationCheckResult\",\"message\":\"invalidFloatWithComponent\",\"params\":{\"component\":\"isFloatValue\",\"value\":\"x\" },\"lineNumber\":5}]"
         ));
         referentielErrors.put("invalidIntegerWithComponent", List.of(
                 "4",
                 "x",
-                "[{\"type\":\"IntegerValidationCheckResult\",\"message\":\"invalidIntegerWithComponent\",\"params\":{\"target\":{\"column\":\"ordre_affichage\"},\"value\":\"x\"},\"lineNumber\":5}]"
+                "[{\"type\":\"IntegerValidationCheckResult\",\"message\":\"invalidIntegerWithComponent\",\"params\":{\"component\":\"ordre_affichage\",\"value\":\"x\"},\"lineNumber\":5}]"
         ));
         referentielErrors.put("duplicatedLineInReference", List.of(
                 "01/01/2016;Notes sur les biovolumes;Notes sur les biovolumes;Notes on biovolumes;;;39,22;false;Phytoplancton;38",
@@ -547,12 +386,12 @@ public class Fixtures {
         referentielErrors.put("invalidReferenceWithComponent", List.of(
                 "38;",
                 "38;martin",
-                "[{\"type\":\"ReferenceValidationCheckResult\",\"message\":\"invalidReferenceWithComponent\",\"params\":{\"target\":\"site\",\"referenceValues\":[],\"refType\":\"site\",\"value\":\"martin\"},\"lineNumber\":39}]"
+                "[{\"type\":\"ReferenceValidationCheckResult\",\"message\":\"invalidReferenceWithComponent\",\"params\":{\"component\":\"site\",\"referenceValues\":[],\"refType\":\"site\",\"value\":\"martin\"},\"lineNumber\":39}]"
         ));
         referentielErrors.put("patternNotMatchedWithComponent", List.of(
                 "02/01/2016",
                 "12:00:00",
-                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"target\":{\"column\":\"date\"},\"pattern\":\"dd/MM/yyyy\",\"value\":\"12:00:00\"},\"lineNumber\":2}]"
+                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"component\":\"date\",\"pattern\":\"dd/MM/yyyy\",\"value\":\"12:00:00\"},\"lineNumber\":2}]"
         ));
         return referentielErrors;
     }
@@ -563,22 +402,22 @@ public class Fixtures {
         DataTypeErrors.put("invalidDate", List.of(
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
                 "suivi des lacs;leman;SHL2;x24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
-                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"target\":{\"column\":\"date_day\"},\"pattern\":\"dd/MM/yyyy\",\"value\":\"x24/02/2020\"},\"lineNumber\":3}]"
+                "[{\"type\":\"DateValidationCheckResult\",\"message\":\"invalidDateWithComponent\",\"params\":{\"component\":\"date_day\",\"pattern\":\"dd/MM/yyyy\",\"value\":\"x24/02/2020\"},\"lineNumber\":3}]"
         ));
         DataTypeErrors.put("invalidInt", List.of(
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;x8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
-                "[{\"type\":\"IntegerValidationCheckResult\",\"message\":\"invalidIntegerWithComponent\",\"params\":{\"target\":{\"column\":\"temperatureDeLAir\"},\"value\":\"x8\"},\"lineNumber\":3}]"
+                "[{\"type\":\"IntegerValidationCheckResult\",\"message\":\"invalidIntegerWithComponent\",\"params\":{\"component\":\"temperatureDeLAir\",\"value\":\"x8\"},\"lineNumber\":3}]"
         ));
         DataTypeErrors.put("invalidFloat", List.of(
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;x10;vert-vert",
-                "[{\"type\":\"FloatValidationCheckResult\",\"message\":\"invalidFloatWithComponent\",\"params\":{\"target\":{\"column\":\"transparenceParSecchi\"},\"value\":\"x10\"},\"lineNumber\":3}]"
+                "[{\"type\":\"FloatValidationCheckResult\",\"message\":\"invalidFloatWithComponent\",\"params\":{\"component\":\"transparenceParSecchi\",\"value\":\"x10\"},\"lineNumber\":3}]"
         ));
         DataTypeErrors.put("requiredValue", List.of(
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
                 "suivi des lacs;leman;SHL2;;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
-                "[{\"type\":\"DefaultCheckerValidationCheckResult\",\"message\":\"requiredValueWithComponent\",\"params\":{\"target\":{\"column\":\"date_day\"}},\"lineNumber\":3}]"
+                "[{\"type\":\"DefaultCheckerValidationCheckResult\",\"message\":\"requiredValueWithComponent\",\"params\":{\"component\":\"date_day\"},\"lineNumber\":3}]"
         ));
         DataTypeErrors.put("duplicatedLineInDatatype", List.of(
                 "suivi des lacs;leman;SHL2;24/02/2020;00:00:00;Tracté par la Daphnie;8;1;ensoleille;clair;;1;979;plat;propre;;10;vert-vert",
@@ -594,49 +433,6 @@ public class Fixtures {
         return referentielFiles;
     }
 
-    public static String getAcbbApplicationName() {
-        return Application.ACBB.getName();
-    }
-
-    public static String getAcbbApplicationConfigurationResourceName() {
-        return "/data/acbb/acbb_openAdom_V2.yaml";
-    }
-
-    public static Map<String, String> getAcbbReferentielFiles() {
-        final Map<String, String> referentielFiles = new LinkedHashMap<>();
-        referentielFiles.put("tr_agroecosystemes_agr", "/data/acbb/agroecosysteme.csv");
-        referentielFiles.put("tr_sites_sit", "/data/acbb/sites.csv");
-        referentielFiles.put("tr_parcelles_par", "/data/acbb/parcelle.csv");
-        referentielFiles.put("tr_unites_unit", "/data/acbb/unites.csv");
-        referentielFiles.put("tr_modalites_mod", "/data/acbb/modalites.csv");
-        referentielFiles.put("tr_version_de_traitement_vdt", "/data/acbb/version_de_traitement.csv");
-        return referentielFiles;
-    }
-
-    public static String getFluxToursDataResourceName() {
-        return "/data/acbb/Flux_tours.csv";
-    }
-
-    public static String getBiomasseProductionTeneurDataResourceName() {
-        return "/data/acbb/biomasse_production_teneur.csv";
-    }
-
-    public InputStream openSwcDataResourceName(final boolean truncated) {
-        final String resourceName = "/data/acbb/SWC.csv";
-        if (truncated) {
-            try {
-                final String collect = Resources.asCharSource(Objects.requireNonNull(getClass().getResource(resourceName)), StandardCharsets.UTF_8).lines()
-                        .limit(100)
-                        .collect(Collectors.joining("\n"));
-                return IOUtils.toInputStream(collect, StandardCharsets.UTF_8);
-            } catch (final IOException e) {
-                throw new OreSiTechnicalException("ne devrait pas arriver", e);
-            }
-        } else {
-            return getClass().getResourceAsStream(resourceName);
-        }
-    }
-
     public static String getMigrationApplicationConfigurationResourceName(final int version) {
         return "/data/migration/fake-app_v" + version + ".yaml";
     }
@@ -649,272 +445,8 @@ public class Fixtures {
         return "/data/migration/couleurs.csv";
     }
 
-    public Cookie addopenAdomAdmin(final String applicationPattern) throws Exception {
-        if (cookie == null) {
-            final String aPassword = "xxxxxxxx";
-            final String aLogin = "openAdomAdmin";
-            final CreateUserResult createUserResult = authenticationService.createUser(aLogin, aPassword, aLogin + "@inrae.fr");
-            authenticationService.addUserRightCreateApplication(createUserResult.userId(), applicationPattern);
-            cookie = mockMvc.perform(post("/api/v1/login")
-                            .param("login", aLogin)
-                            .param("password", aPassword))
-                    .andReturn().getResponse().getCookie(JWTExtractor.JWT_COOKIE_NAME);
-        }
-        return cookie;
-    }@Transactional
-    void addRoleAdmin(final CreateUserResult dbUserResult) {
-        String sql = """
-        GRANT "openAdomAdmin" TO :userId WITH INHERIT TRUE
-        """;
-
-        namedParameterJdbcTemplate.update(
-                sql,
-                Map.of("userId", dbUserResult.userId().toString())
-        );
-    }
-
-    @Transactional
-    void setToActive(final UUID userId) {
-        String sql = """
-        UPDATE public.OreSiUser 
-        SET accountstate = 'active' 
-        WHERE id = :id
-        """;
-
-        namedParameterJdbcTemplate.update(
-                sql,
-                Map.of("id", userId)
-        );
-    }
-
-
-    public Cookie addApplicationCreatorUser(final String applicationPattern) throws Exception {
-        if (cookie == null) {
-            final String aPassword = "xxxxxxxx";
-            final String aLogin = "poussin";
-            final CreateUserResult createUserResult = authenticationService.createUser(aLogin, aPassword, aLogin + "@inrae.fr");
-            setToActive(createUserResult.userId());
-            addRoleAdmin(createUserResult);
-            MockHttpServletResponse response = mockMvc.perform(post("/api/v1/login")
-                            .param("login", aLogin)
-                            .param("password", aPassword))
-                    .andReturn().getResponse();
-            cookie = response.getCookie(JWTExtractor.JWT_COOKIE_NAME);
-        }
-        final String aPassword = "xxxxxxxx";
-        final CreateUserResult createUserResult = authenticationService.createUser(applicationPattern, aPassword, applicationPattern + "@inrae.fr");
-        setToActive(createUserResult.userId());
-        UUID userId = createUserResult.userId();
-        final ResultActions resultActions = mockMvc.perform(put("/api/v1/authorization/applicationCreator")
-                        .param("userIdOrLogin", userId.toString())
-                        .param("applicationPattern", applicationPattern)
-                        .cookie(cookie))
-                .andExpect(status().is2xxSuccessful())
-                .andExpect(jsonPath("$.roles.currentUser", IsEqual.equalTo(userId.toString())))
-                .andExpect(jsonPath("$.roles.memberOf", Matchers.hasItem("applicationCreator")))
-                .andExpect(jsonPath("$.authorizations", Matchers.hasItem(applicationPattern)))
-                .andExpect(jsonPath("$.id", IsEqual.equalTo(userId.toString())));
-        OreSiUser user = userRepository.findById(userId);
-        assertTrue(user.getAuthorizations().contains(applicationPattern));
-        setToActive(createUserResult.userId());
-        return mockMvc.perform(post("/api/v1/login")
-                        .param("login", applicationPattern)
-                        .param("password", aPassword))
-                .andReturn().getResponse().getCookie(JWTExtractor.JWT_COOKIE_NAME);
-    }
-
-    public String createApplicationMonSore(final Cookie authCookie, final String applicationName) {
-        MvcResult result;
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getMonsoreApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "monsore.yaml", "text/plain", configurationFile);
-            result = loadApplication(configuration, authCookie, (applicationName == null ? "monsore" : applicationName), (applicationName == null ? "monsore" : applicationName));
-
-            return getIdFromApplicationResult(result);
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    public Exception createApplicationMonSoreWithError(final Cookie authCookie, final String applicationName) throws Exception {
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getMonsoreApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "monsore.yaml", "text/plain", configurationFile);
-            return loadApplicationWithError(configuration, authCookie, (applicationName == null ? "monsore" : applicationName));
-
-        }
-    }
-
-    public Cookie addMonsoreApplication() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("monsore");
-        final String result = createApplicationMonSore(authCookie, "monsore");
-
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getMonsoreReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/monsore/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().isCreated());
-            }
-        }
-
-        // ajout de data
-        try (final InputStream refStream = getClass().getResourceAsStream(getPemDataResourceName())) {
-            final MockMultipartFile refFile = new MockMultipartFile("file", "data-pem.csv", "text/plain", refStream);
-            mockMvc.perform(multipart("/api/v1/applications/monsore/data/pem")
-                            .file(refFile).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-        return authCookie;
-    }
-
-    public Cookie addMigrationApplication() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("fakeapp");
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getMigrationApplicationConfigurationResourceName(1))) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "fake-app.yaml", "text/plain", configurationFile);
-
-            getIdFromApplicationResult(loadApplication(configuration, authCookie, "fakeapp", "fakeapp"));
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        // Ajout de referentiel
-        try (final InputStream refStream = getClass().getResourceAsStream(getMigrationApplicationReferenceResourceName())) {
-            final MockMultipartFile refFile = new MockMultipartFile("file", "reference.csv", "text/plain", refStream);
-            mockMvc.perform(multipart("/api/v1/applications/fakeapp/data/couleurs")
-                            .file(refFile).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data
-        try (final InputStream refStream = getClass().getResourceAsStream(getMigrationApplicationDataResourceName())) {
-            final MockMultipartFile refFile = new MockMultipartFile("file", "data.csv", "text/plain", refStream);
-            mockMvc.perform(multipart("/api/v1/applications/fakeapp/data/jeu1")
-                            .file(refFile).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-
-        return authCookie;
-    }
-
-    public Cookie addApplicationAcbb(Cookie authCookie) throws Exception {
-        Cookie authCookie1 = authCookie;
-        if (authCookie1 == null) {
-            authCookie1 = addApplicationCreatorUser("acbb");
-        }
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getAcbbApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "acbb.yaml", "text/plain", configurationFile);
-            getIdFromApplicationResult(loadApplication(configuration, authCookie1, "acbb", "acbb"));
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getAcbbReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/acbb/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie1))
-                        .andExpect(status().isCreated());
-            }
-        }
-
-        // ajout de data
-        addFluxTours(authCookie1);
-
-        addBiomasse(authCookie1);
-
-        addSWC(authCookie1);
-        return authCookie1;
-    }
-
-    private void addSWC(final Cookie authCookie) throws Exception {
-        try (final InputStream in = openSwcDataResourceName(true)) {
-            final MockMultipartFile file = new MockMultipartFile("file", "SWC.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/acbb/data/SWC")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-    }
-
-    private void addBiomasse(final Cookie authCookie) throws Exception {
-        try (final InputStream in = getClass().getResourceAsStream(getBiomasseProductionTeneurDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "biomasse_production_teneur.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/acbb/data/biomasse_production_teneur")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-    }
-
-    private void addFluxTours(final Cookie authCookie) throws Exception {
-        try (final InputStream in = getClass().getResourceAsStream(getFluxToursDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "Flux_tours.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/acbb/data/flux_tours")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-    }
-
     public static String getValidationApplicationConfigurationResourceName() {
         return "/data/validation/broken-fake-app.yaml";
-    }
-
-    public static String getHauteFrequenceApplicationConfigurationResourceName() {
-        return "/data/hautefrequence/hautefrequence.yaml";
-    }
-
-    public static Map<String, String> getHauteFrequenceReferentielFiles() {
-        final Map<String, String> referentielFiles = new LinkedHashMap<>();
-        referentielFiles.put("a", "/data/hautefrequence/a.csv");
-        referentielFiles.put("b", "/data/hautefrequence/b.csv");
-        referentielFiles.put("outil", "/data/hautefrequence/outil.csv");
-        referentielFiles.put("projet", "/data/hautefrequence/projet.csv");
-        referentielFiles.put("site", "/data/hautefrequence/site.csv");
-        referentielFiles.put("plateforme", "/data/hautefrequence/plateforme.csv");
-        referentielFiles.put("variable", "/data/hautefrequence/variable.csv");
-        return referentielFiles;
-    }
-
-    public static String getHauteFrequenceDataResourceName() {
-        return "/data/hautefrequence/rnt_bimont_haute_frequence_14-06-2016_14-03-2017.csv";
-    }
-
-    public Cookie addApplicationHauteFrequence() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("hautefrequence");
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getHauteFrequenceApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "hautefrequence.yaml", "text/plain", configurationFile);
-            loadApplication(configuration, authCookie, "hautefrequence", "hautefrequence");
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getHauteFrequenceReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/hautefrequence/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().is2xxSuccessful());
-            }
-        }
-
-        // ajout de data
-        try (final InputStream refStream = getClass().getResourceAsStream(getHauteFrequenceDataResourceName())) {
-            final MockMultipartFile refFile = new MockMultipartFile("file", "hautefrequence.csv", "text/plain", refStream);
-            mockMvc.perform(multipart("/api/v1/applications/hautefrequence/data/hautefrequence")
-                            .file(refFile).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().is2xxSuccessful());
-        }
-        return authCookie;
     }
 
     public static String getDuplicatedApplicationConfigurationResourceName() {
@@ -952,93 +484,6 @@ public class Fixtures {
 
     public static String getOlaApplicationConfigurationResourceName() {
         return "/data/olac/olac.yaml";
-    }
-
-    public Cookie addApplicationOLAC() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("olac");
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getOlaApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "olac.yaml", "text/plain", configurationFile);
-
-            loadApplication(configuration, authCookie, "olac", "olac");
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getOlaReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/olac/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().isCreated());
-            }
-        }
-
-        // ajout de data condition_prelevements
-        try (final InputStream in = getClass().getResourceAsStream(getConditionPrelevementDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "condition_prelevements.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/condition_prelevements")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data physico-chimie
-        try (final InputStream in = getClass().getResourceAsStream(getPhysicoChimieDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "physico-chimie.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/physico-chimie")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data sonde_truncated
-        try (final InputStream in = getClass().getResourceAsStream(getSondeDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "sonde_truncated.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/sonde_truncated")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data phytoplancton_aggregated
-        try (final InputStream in = getClass().getResourceAsStream(getPhytoAggregatedDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "phytoplancton_aggregated.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/phytoplancton_aggregated")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data phytoplancton_truncated
-        try (final InputStream in = getClass().getResourceAsStream(getPhytoplanctonDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "phytoplancton_truncated.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/phytoplancton__truncated")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data  zooplancton_truncated
-        try (final InputStream in = getClass().getResourceAsStream(getZooplanctonDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "zooplancton_truncated.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/zooplancton__truncated")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        // ajout de data zooplancton_biovolumes
-        try (final InputStream in = getClass().getResourceAsStream(getZooplactonBiovolumDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "zooplancton_biovolumes.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/olac/data/zooplancton_biovolumes")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        return authCookie;
     }
 
     public static String getConditionPrelevementDataResourceName() {
@@ -1115,38 +560,6 @@ public class Fixtures {
         return "/data/foret/foret_essai.yaml";
     }
 
-    public Cookie addApplicationFORET() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("foret");
-        try (final InputStream configurationFile = getClass().getResourceAsStream(getForetApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "foret.yaml", "text/plain", configurationFile);
-            loadApplication(configuration, authCookie, "foret", "foret");
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getForetReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/foret/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().isCreated());
-            }
-        }
-
-        // ajout de data
-        try (final InputStream in = getClass().getResourceAsStream(getFluxMeteoForetDataResourceName())) {
-            final MockMultipartFile file = new MockMultipartFile("file", "flux_meteo_dataResult.csv", "text/plain", in);
-            mockMvc.perform(multipart("/api/v1/applications/foret/data/flux_meteo_dataResult")
-                            .file(file).with(csrf().asHeader())
-                            .cookie(authCookie))
-                    .andExpect(status().isCreated());
-        }
-
-        return authCookie;
-    }
-
     public static String getFluxMeteoForetDataResourceName() {
         return "/data/foret/flux_meteo_dataResult.csv";
     }
@@ -1185,37 +598,6 @@ public class Fixtures {
                 .build();
     }
 
-    public void addApplicationRecursivity() throws Exception {
-        final Cookie authCookie = addApplicationCreatorUser("recursivite");
-        try (final InputStream in = getClass().getResourceAsStream(getRecursivityApplicationConfigurationResourceName())) {
-            final MockMultipartFile configuration = new MockMultipartFile("file", "recursivity.yaml", "text/plain", in);
-            loadApplication(configuration, authCookie, "recursivite", "recursivite");
-        } catch (final Throwable e) {
-            throw new RuntimeException(e);
-        }
-
-        String response;
-        // Ajout de referentiel
-        for (final Map.Entry<String, String> e : getRecursiviteReferentielOrderFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/recursivite/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().isCreated());
-            }
-        }
-        for (final Map.Entry<String, String> e : getRecursiviteReferentielFiles().entrySet()) {
-            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
-                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
-                mockMvc.perform(multipart("/api/v1/applications/recursivite/data/{refType}", e.getKey())
-                            .file(refFile).with(csrf().asHeader())
-                                .cookie(authCookie))
-                        .andExpect(status().isCreated());
-            }
-        }
-    }
-
     public static String getMultiplicityMany() {
         return "/data/multiplicity/multiplicity.yaml";
     }
@@ -1230,6 +612,401 @@ public class Fixtures {
 
     public static String getMultiplicityManyData() {
         return "/data/multiplicity/data/bugs.csv";
+    }
+
+    public static ResultMatcher testZip(final List<String> expectedEntries) {
+        return result -> {
+            final byte[] contentAsByteArray = result.getResponse().getContentAsByteArray();
+            Files.write(Path.of("/tmp/data.zip"), contentAsByteArray);
+            final List<String> findedEntries = new LinkedList<>();
+            try (final ZipInputStream zi = new ZipInputStream(new ByteArrayInputStream(contentAsByteArray))) {
+                ZipEntry entry = zi.getNextEntry();
+                while (entry != null) {
+                    Assertions.assertNotNull(entry, "l'entrée est nulle ");
+                    findedEntries.add(entry.getName());
+                    entry = zi.getNextEntry();
+                }
+                expectedEntries
+                        .forEach(e ->
+                                Assertions.assertTrue(() -> findedEntries.contains(e), String.format("Le zip doit contenir %s", e)));
+            } catch (final IOException e) {
+                throw new OreSiTechnicalException(e.getMessage(), e);
+            }
+        };
+    }
+
+    public UserConnection createUserForUserDefinition(CreateUser createUser, boolean isActive, boolean isAdmin) throws Exception {
+        CreateUserResult userResult;
+        Cookie cookie;
+        OreSiUser user;
+        try {
+            user = authenticationService.getByIdOrLogin(createUser.login());
+            userResult = Optional.ofNullable(user)
+                    .map(CreateUserResult::of)
+                    .orElseThrow();
+        } catch (final Exception e) {
+            userResult = createUserIfNotExists(createUser);
+
+        }
+        if (isActive) {
+            setToActive(userResult.userId());
+        }
+        if (isAdmin) {
+            addRoleAdmin(userResult);
+        }
+        cookie = mockMvc.perform(post("/api/v1/login")
+                        .param("login", createUser.login())
+                        .param("password", createUser.password()))
+                .andReturn().getResponse().getCookie(JWTExtractor.JWT_COOKIE_NAME);
+        user = authenticationService.getByIdOrLogin(createUser.login());
+        return new UserConnection(CreateUserResult.of(user), cookie);
+    }
+
+    public CreateUserResult createUserIfNotExists(CreateUser createUser) throws Exception {
+        if (mockMvc.perform(post("/api/v1/login")
+                        .param("login", createUser.login())
+                        .param("password", createUser.password()))
+                    .andReturn()
+                    .getResponse().getStatus() > 300) {
+            return authenticationService.createUser(createUser.login(), createUser.password(), createUser.email());
+        } else {
+            OreSiUser userByLogin = userRepository.findByLogin(createUser.login()).orElse(null);
+            return CreateUserResult.of(Objects.requireNonNull(userByLogin));
+        }
+
+    }
+
+    public void addUserRightCreateApplication(final UUID userId, final String pattern) throws Exception {
+        mockMvc.perform(put("/api/v1/authorization/applicationCreator")
+                        .param("userIdOrLogin", userId.toString())
+                        .param("applicationPattern", pattern)
+                        .with(csrf().asHeader())
+                        .cookie(adminConnection.cookie()))
+                .andExpect(status().is2xxSuccessful())
+                .andExpect(jsonPath("$.roles.memberOf", hasItem("applicationCreator")))
+                .andExpect(jsonPath("$.authorizations", hasItem(pattern)))
+                .andExpect(jsonPath("$.id", IsEqual.equalTo(userId.toString())));
+    }
+
+    public String getIdFromApplicationResult(final MvcResult result) throws UnsupportedEncodingException {
+        return (String) getResults(result).getFirst().result();
+
+    }
+
+    public Exception loadApplicationWithError(final MockMultipartFile file,
+                                              final Cookie cookie,
+                                              final String applicationName) throws Exception {
+        return mockMvc
+                .perform(multipart("/api/v1/applications/{applicationName}", applicationName)
+                        .file(file).with(csrf().asHeader())
+                        .cookie(cookie)
+                )
+                .andExpect(status().is(401))
+                .andReturn()
+                .getResolvedException();
+    }
+
+    MvcResult validateApplication(final MockMultipartFile file,
+                                  final Cookie cookie) throws Exception {
+        final ResultActions result = mockMvc.perform(
+                multipart("/api/v1/validate-configuration")
+                        .file(file).with(csrf().asHeader())
+                        .accept(MediaType.APPLICATION_NDJSON)
+                        .cookie(cookie)
+        );
+        return mockMvc.perform(asyncDispatch(
+                        result
+                                .andDo(result1 -> {
+                                    if (result1.getResponse().getStatus() > 250) {
+                                        System.out.println(result1);
+                                    }
+                                })
+                                .andExpect(request().asyncStarted())
+                                .andReturn())
+                )
+                .andReturn();
+    }
+
+    public MvcResult loadApplication(final MockMultipartFile file,
+                                     final Cookie cookie,
+                                     final String applicationName,
+                                     final String comment) throws Throwable {
+        try {
+            final ResultActions result = mockMvc.perform(
+                    multipart("/api/v1/applications/{applicationName}", applicationName)
+                            .file(file).with(csrf().asHeader())
+                            .param("comment", comment != null ? comment : "")
+                            .accept(MediaType.APPLICATION_NDJSON)
+                            .cookie(cookie)
+            );
+            return mockMvc.perform(asyncDispatch(
+                            result
+                                    //.andExpect(request().asyncStarted())
+                                    .andReturn())
+                    )
+                    .andReturn();
+        } catch (final Exception e) {
+            throw e.getCause() == null ? e : e.getCause();
+        }
+    }
+
+    MvcResult changeConfiguration(final MockMultipartFile file,
+                                  final Cookie cookie,
+                                  final String applicationName,
+                                  final String comment) throws Exception {
+        final ResultActions result = mockMvc.perform(
+                multipart("/api/v1/applications/{applicationName}/configuration", applicationName)
+                        .file(file).with(csrf().asHeader())
+                        .param("comment", comment != null ? comment : "")
+                        .accept(MediaType.APPLICATION_NDJSON)
+                        .cookie(cookie)
+        );
+        return mockMvc.perform(asyncDispatch(
+                        result
+                                .andExpect(request().asyncStarted())
+                                .andReturn())
+                )
+                .andReturn();
+    }
+
+    public Cookie addopenAdomAdmin(final String applicationPattern) throws Exception {
+        final String aPassword = "xxxxxxxx";
+        final String aLogin = "openAdomAdmin";
+        CreateUser openAdomAdmin = new CreateUser(aLogin, aPassword, aLogin + "@inrae.fr");
+        final UserConnection openAdomConnection = createUserForUserDefinition(openAdomAdmin, true, true);
+        authenticationService.addUserRightCreateApplication(openAdomConnection.userResult().userId(), applicationPattern);
+        return openAdomConnection.cookie();
+    }
+
+    @Transactional
+    void addRoleAdmin(final CreateUserResult dbUserResult) {
+        String sql = """
+                GRANT "openAdomAdmin" TO "%s" WITH INHERIT TRUE
+                """.formatted(dbUserResult.userId().toString());
+
+        namedParameterJdbcTemplate.update(
+                sql,
+                Map.of()
+        );
+    }
+
+    @Transactional
+    void setToActive(final UUID userId) {
+        String sql = """
+                UPDATE public.OreSiUser 
+                SET accountstate = 'active' 
+                WHERE id = :id
+                """;
+
+        namedParameterJdbcTemplate.update(
+                sql,
+                Map.of("id", userId)
+        );
+    }
+
+    public UserConnection addApplicationCreatorUser(final String applicationPattern) throws Exception {
+
+        final String aPassword = "xxxxxxxx";
+        final CreateUser createUser = new CreateUser(applicationPattern, aPassword, applicationPattern + "@inrae.fr");
+        final UserConnection createUserConnection = createUserForUserDefinition(createUser, true, true);
+        final UUID userId = createUserConnection.userResult().userId();
+        mockMvc.perform(put("/api/v1/authorization/applicationCreator")
+                        .param("userIdOrLogin", userId.toString())
+                        .param("applicationPattern", applicationPattern)
+                        .with(csrf())
+                        .cookie(createUserConnection.cookie()))
+
+                .andExpect(status().is2xxSuccessful())
+                .andExpect(jsonPath("$.roles.user.id", IsEqual.equalTo(userId.toString())))
+                .andExpect(jsonPath("$.roles.memberOf", hasItem("applicationCreator")))
+                .andExpect(jsonPath("$.authorizations", hasItem(applicationPattern)))
+                .andExpect(jsonPath("$.id", IsEqual.equalTo(userId.toString())));
+        OreSiUser user = userRepository.findById(userId);
+        assertTrue(user.getAuthorizations().contains(applicationPattern));
+        return createUserConnection;
+    }
+
+    public UserConnection addMigrationApplication() throws Exception {
+        final UserConnection authConnection = addApplicationCreatorUser("fakeapp");
+        try (final InputStream configurationFile = getClass().getResourceAsStream(getMigrationApplicationConfigurationResourceName(1))) {
+            final MockMultipartFile configuration = new MockMultipartFile("file", "fake-app.yaml", "text/plain", configurationFile);
+            getIdFromApplicationResult(loadApplication(configuration, authConnection.cookie(), "fakeapp", "fakeapp"));
+        } catch (final Throwable e) {
+            throw new OreSiTechnicalException(e.getMessage(), e);
+        }
+
+        // Ajout de referentiel
+        try (final InputStream refStream = getClass().getResourceAsStream(getMigrationApplicationReferenceResourceName())) {
+            final MockMultipartFile refFile = new MockMultipartFile("file", "reference.csv", "text/plain", refStream);
+            mockMvc.perform(multipart("/api/v1/applications/fakeapp/data/couleurs")
+                            .file(refFile).with(csrf().asHeader())
+                            .cookie(authConnection.cookie()))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data
+        try (final InputStream refStream = getClass().getResourceAsStream(getMigrationApplicationDataResourceName())) {
+            final MockMultipartFile refFile = new MockMultipartFile("file", "data.csv", "text/plain", refStream);
+            mockMvc.perform(multipart("/api/v1/applications/fakeapp/data/jeu1")
+                            .file(refFile).with(csrf().asHeader())
+                            .cookie(authConnection.cookie()))
+                    .andExpect(status().is2xxSuccessful());
+        }
+
+        return authConnection;
+    }
+
+    public UserConnection addApplicationOLAC() throws Exception {
+        final UserConnection authConnection = addApplicationCreatorUser("olac");
+        final Cookie authCookie = authConnection.cookie();
+        try (final InputStream configurationFile = getClass().getResourceAsStream(getOlaApplicationConfigurationResourceName())) {
+            final MockMultipartFile configuration = new MockMultipartFile("file", "olac.yaml", "text/plain", configurationFile);
+
+            loadApplication(configuration, authCookie, "olac", "olac");
+        } catch (final Throwable e) {
+            throw new OreSiTechnicalException(e.getMessage(), e);
+        }
+
+        // Ajout de referentiel
+        for (final Map.Entry<String, String> e : getOlaReferentielFiles().entrySet()) {
+            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
+                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
+                mockMvc.perform(multipart("/api/v1/applications/olac/data/{refType}", e.getKey())
+                                .file(refFile)
+                                .with(csrf().asHeader())
+                                .cookie(authCookie))
+                        .andExpect(status().isCreated());
+            }
+        }
+
+        // ajout de data condition_prelevements
+        try (final InputStream in = getClass().getResourceAsStream(getConditionPrelevementDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "condition_prelevements.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/condition_prelevements")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data physico-chimie
+        try (final InputStream in = getClass().getResourceAsStream(getPhysicoChimieDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "physico-chimie.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/physico-chimie")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data sonde_truncated
+        try (final InputStream in = getClass().getResourceAsStream(getSondeDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "sonde_truncated.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/sonde_truncated")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data phytoplancton_aggregated
+        try (final InputStream in = getClass().getResourceAsStream(getPhytoAggregatedDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "phytoplancton_aggregated.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/phytoplancton_aggregated")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data phytoplancton_truncated
+        try (final InputStream in = getClass().getResourceAsStream(getPhytoplanctonDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "phytoplancton_truncated.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/phytoplancton__truncated")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data  zooplancton_truncated
+        try (final InputStream in = getClass().getResourceAsStream(getZooplanctonDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "zooplancton_truncated.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/zooplancton__truncated")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        // ajout de data zooplancton_biovolumes
+        try (final InputStream in = getClass().getResourceAsStream(getZooplactonBiovolumDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "zooplancton_biovolumes.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/olac/data/zooplancton_biovolumes")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        return authConnection;
+    }
+
+    public UserConnection addApplicationFORET() throws Exception {
+        final UserConnection authConnection = addApplicationCreatorUser("foret");
+        final Cookie authCookie = authConnection.cookie();
+        try (final InputStream configurationFile = getClass().getResourceAsStream(getForetApplicationConfigurationResourceName())) {
+            final MockMultipartFile configuration = new MockMultipartFile("file", "foret.yaml", "text/plain", configurationFile);
+            loadApplication(configuration, authCookie, "foret", "foret");
+        } catch (final Throwable e) {
+            throw new OreSiTechnicalException(e.getMessage(), e);
+        }
+
+        // Ajout de referentiel
+        for (final Map.Entry<String, String> e : getForetReferentielFiles().entrySet()) {
+            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
+                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
+                mockMvc.perform(multipart("/api/v1/applications/foret/data/{refType}", e.getKey())
+                                .file(refFile).with(csrf().asHeader())
+                                .cookie(authCookie))
+                        .andExpect(status().isCreated());
+            }
+        }
+
+        // ajout de data
+        try (final InputStream in = getClass().getResourceAsStream(getFluxMeteoForetDataResourceName())) {
+            final MockMultipartFile file = new MockMultipartFile("file", "flux_meteo_dataResult.csv", "text/plain", in);
+            mockMvc.perform(multipart("/api/v1/applications/foret/data/flux_meteo_dataResult")
+                            .file(file).with(csrf().asHeader())
+                            .cookie(authCookie))
+                    .andExpect(status().isCreated());
+        }
+
+        return authConnection;
+    }
+
+    public UserConnection addApplicationRecursivity() throws Exception {
+        final UserConnection authConnection = addApplicationCreatorUser("recursivite");
+        final Cookie authCookie = authConnection.cookie();
+        try (final InputStream in = getClass().getResourceAsStream(getRecursivityApplicationConfigurationResourceName())) {
+            final MockMultipartFile configuration = new MockMultipartFile("file", "recursivity.yaml", "text/plain", in);
+            loadApplication(configuration, authCookie, "recursivite", "recursivite");
+        } catch (final Throwable e) {
+            throw new OreSiTechnicalException(e.getMessage(), e);
+        }
+        // Ajout de referentiel
+        for (final Map.Entry<String, String> e : getRecursiviteReferentielOrderFiles().entrySet()) {
+            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
+                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
+                mockMvc.perform(multipart("/api/v1/applications/recursivite/data/{refType}", e.getKey())
+                                .file(refFile).with(csrf().asHeader())
+                                .cookie(authCookie))
+                        .andExpect(status().isCreated());
+            }
+        }
+        for (final Map.Entry<String, String> e : getRecursiviteReferentielFiles().entrySet()) {
+            try (final InputStream refStream = getClass().getResourceAsStream(e.getValue())) {
+                final MockMultipartFile refFile = new MockMultipartFile("file", e.getValue(), "text/plain", refStream);
+                mockMvc.perform(multipart("/api/v1/applications/recursivite/data/{refType}", e.getKey())
+                                .file(refFile).with(csrf().asHeader())
+                                .cookie(authCookie))
+                        .andExpect(status().isCreated());
+            }
+        }
+        return authConnection;
     }
 
     @Getter
@@ -1251,5 +1028,11 @@ public class Fixtures {
             this.dataTypes = dataTypes;
         }
 
+    }
+
+    public record CreateUser(String login, String password, String email) {
+    }
+
+    public record UserConnection(CreateUserResult userResult, Cookie cookie) {
     }
 }
